# DeepJSCC

./: .gitignore  README.md  config.yaml  pyproject.toml
src/deepjscc/: __init__.py  channel.py  cli.py  config.py  data.py  eval.py  metrics.py  model.py  train.py  utils.py
tests/: test_awgn.py  test_config_validation.py  test_power_norm.py  test_psnr.py  test_smoke_forward.py
