[project]
name = "deepjscc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dudosya", email = "kenaykay@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
deepjscc = "deepjscc:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
